--- a/public/Testing-page-random.html
+++ b/public/Testing-page-random.html
@@ -19,6 +19,9 @@
             border: 1px solid #000;
             background-color: #fff;
             position: relative;
+            overflow: hidden; /* Prevent overflow from elements moving out of bounds */
+            width: 600px;
+            height: 150px;
         }
 
         .trex {
@@ -26,8 +29,7 @@
             bottom: 10px;
             width: 50px;
             height: 50px;
-            background: url('data:image/png;base64,...') no-repeat; /* You can use a base64 image of a T-Rex here */
-            background-size: cover;
+            background-color: #555; /* A gray box to represent the T-Rex */
         }
 
         .cactus {
@@ -36,23 +38,12 @@
             width: 20px;
             height: 30px;
             background-color: green;
-            animation: slide 2s infinite linear;
-        }
-
-        @keyframes slide {
-            from {
-                left: 100%;
-            }
-
-            to {
-                left: -20px;
-            }
         }
     </style>
 </head>
 
 <body>
-    <div id="gameCanvas" style="width: 600px; height: 150px;">
+    <div id="gameCanvas">
         <div class="trex" id="trex"></div>
         <div class="cactus" id="cactus"></div>
     </div>
@@ -93,6 +84,29 @@
             }
         });
 
+        // Spawn cactus and check for collision
+        let cactusInterval = setInterval(() => {
+            cactus.style.animation = 'none'; // Reset animation
+            cactus.style.left = '600px'; // Reset cactus position
+            cactus.offsetHeight; // Trigger reflow
+            cactus.style.animation = 'slide 2s infinite linear'; // Start new animation
+        }, 2000);
+
+        const slideKeyframes = `@keyframes slide {
+            from {
+                left: 100%;
+            }
+            to {
+                left: -20px;
+            }
+        }`;
+
+        const styleSheet = document.createElement("style");
+        styleSheet.type = "text/css";
+        styleSheet.innerText = slideKeyframes;
+
+        document.head.appendChild(styleSheet);
+
         setInterval(() => {
             const trexRect = trex.getBoundingClientRect();
             const cactusRect = cactus.getBoundingClientRect();
@@ -103,6 +117,7 @@
                 trexRect.bottom > cactusRect.top
             ) {
                 alert('Game Over!');
+                clearInterval(cactusInterval);
                 document.location.reload();
             }
         }, 50);
