--- a/public/Testing-page-random.html
+++ b/public/Testing-page-random.html
@@ -30,6 +30,7 @@
             width: 30px; /* Smaller width */
             height: 30px; /* Smaller height */
             background-color: #555; /* Gray box representing the T-Rex */
+            left: 50px; /* Initial forward position */
         }
 
         .cactus {
